<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.999">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            android:background="@drawable/bg"
            android:alpha="0.8">

        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginTop="48dp"
            android:textColor="@color/white"
            android:text="@string/SplashTitle2"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/imaged"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:background="@drawable/border_circuler_white"
                    android:src="@drawable/newleads1"
                    android:padding="32dp"
                    android:layout_gravity="center"
                    android:elevation="16dp"
                    android:tint="@color/green" />

            </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"></View>


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:maxLines="3"
            android:padding="8dp"
            android:text="@string/Splash2"
            android:textAppearance="?android:textAppearanceLarge"></TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"></View>


    </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/llGetStarted2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/ripplewithmask">

        <TextView
            android:id="@+id/GetStarted2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/skip"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white"></TextView>
    </LinearLayout>

</LinearLayout>