<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.999">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:background="@drawable/bg"
            android:orientation="vertical"
            android:weightSum="1">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="32dp"
                android:layout_weight="0.15"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/welcometo"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold"></TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/partnericon1"
                    android:textStyle="bold"></ImageView>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05"></View>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.55"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/imaged"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:background="@drawable/border_circuler_white"
                    android:src="@drawable/digitaljourney"
                    android:elevation="16dp"
                    android:tint="@color/green" />

              </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05"></View>


            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:maxLines="3"
                android:padding="16dp"
                android:text="@string/Splash1"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="italic"></TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05"></View>


        </LinearLayout>
    </FrameLayout>


    <LinearLayout
        android:id="@+id/llGetStarted1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/ripplewithmask">

        <TextView
            android:id="@+id/GetStarted1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/skip"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white"></TextView>
    </LinearLayout>


</LinearLayout>